Fix warnings from FindBugs